@@ -18,14 +18,16 @@ buildscript {
         classpath "net.ltgt.gradle:gradle-apt-plugin:0.17"
         classpath group: 'de.dynamicfiles.projects.gradle.plugins', name: 'javafx-gradle-plugin', version: '8.8.2'
         classpath 'com.github.jengelman.gradle.plugins:shadow:2.0.1'
+        classpath 'org.openjfx:javafx-plugin:0.0.7'
     }
 }
 
 apply plugin: 'java'
+apply plugin: 'org.openjfx.javafxplugin'
 apply plugin: 'com.github.johnrengelman.shadow'
 apply plugin: 'kotlin'
 apply plugin: 'application'
-apply plugin: 'javafx-gradle-plugin'
+//apply plugin: 'javafx-gradle-plugin'
 apply plugin: 'edu.sc.seis.launch4j'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'net.ltgt.apt-idea'
@@ -35,7 +37,21 @@ mainClassName = 'eu.pretix.pretixscan.desktop.PretixScanMain'
 
 repositories {
     mavenCentral()
+    maven {
+        url "https://oss.sonatype.org/content/repositories/snapshots"
+    }
 }
+
+applicationDefaultJvmArgs = [
+        // TODO: This is a problem as it is platform-dependent
+        "-p", "/usr/lib/jvm/java-11-openjdk/lib/javafx.base.jar:/usr/lib/jvm/java-11-openjdk/lib/javafx.graphics.jar:/usr/lib/jvm/java-11-openjdk/lib/javafx.controls.jar",
+        // Add module. I don't get why this is necessary, but here we are
+        "--add-modules", "javafx.controls",
+        // Add exports
+        // See https://github.com/jfoenixadmin/JFoenix/issues/889
+        "--add-exports=javafx.controls/com.sun.javafx.scene.control.inputmap=ALL-UNNAMED",
+        "--add-exports=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED"
+]
 
 compileKotlin {
     sourceCompatibility = JavaVersion.VERSION_1_8
@@ -48,8 +64,12 @@ compileKotlin {
     }
 }
 dependencies {
+    implementation 'org.openjfx:javafx-base:11'
+    implementation 'org.openjfx:javafx-controls:11'
+    implementation 'org.openjfx:javafx-graphics:11'
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'no.tornado:tornadofx:1.7.14'
+    implementation 'no.tornado:tornadofx:2.0.0-SNAPSHOT'
     implementation 'org.xerial:sqlite-jdbc:3.20.1'
     implementation 'net.harawata:appdirs:1.0.0'
     implementation 'net.java.dev.jna:platform:3.5.2'
@@ -57,7 +77,7 @@ dependencies {
     implementation "de.huxhorn.lilith:de.huxhorn.lilith.3rdparty.junique:1.0.4"
     implementation 'com.github.kittinunf.fuel:fuel:1.12.0'
     implementation 'de.jensd:fontawesomefx-materialicons:2.2.0-5'
-    implementation 'com.jfoenix:jfoenix:8.0.3'
+    implementation 'com.jfoenix:jfoenix:9.0.9'
     implementation 'org.apache.pdfbox:pdfbox:2.0.13'
 
     // libpretixsync
@@ -83,7 +103,12 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
-jfx {
+javafx {
+    version = "11.0.2"
+    modules = ['javafx.base', 'javafx.controls', 'javafx.graphics']
+}
+
+/*jfx {
     mainClass = mainClassName
     vendor = 'pretix.eu'
     jfxMainAppJarName = "pretixscan-${version}.jar"
@@ -94,7 +119,7 @@ jfx {
     needShortcut = false
     needMenu = false
     appName = "pretixscan"
-}
+}*/
 
 shadowJar {
     baseName = project.name
